1.实现keystore文件的下载 2.实现privateKey与keystore文件的切换显示 3.实现导航栏的创建 4.更新README.md文件

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ETHWalletDemo",
   "version": "1.0.0",
-  "description": "|  修订日期  |   姓名    |          邮箱           | | :--------: | :-------: | :---------------------: | | 2018-10-10 | brucefeng | brucefeng@brucefeng.com |",
+  "description": "ETHWalletDemo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
